src/main/java/com/example/copro/global/error/exception/AuthGroupException.java
package com.example.copro.global.error.exception;

public abstract class AuthGroupException extends RuntimeException{
    public AuthGroupException(String message) {
        super(message);
    }
}
